# Case_Churn

./: Desafio_churn.ipynb  README.md  pyproject.toml
