[project]
name = "desafio-churn"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe",email = "felipeviniciusac@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
